[Mengxing Yuan] #480 feat: support add additional product
